# wine-chat

./: .python-version  LICENSE.md  README.md  app.py  pyproject.toml
.streamlit/: config.toml
